tests/snapshots/terminal_override__terminal_output_tests_force_false.snap
---
source: tests/terminal_override.rs
info:
  program: handlr
  args:
    - "--force-terminal-output=false"
    - "-vvv"
    - "--disable-notifications"
    - mime
    - "./tests/assets"
---
success: true
exit_code: 0
----- stdout -----
path          	mime           
./tests/assets	inode/directory

----- stderr -----
[2m[TIMESTAMP][0m [34mDEBUG[0m [2mhandlr[0m[2m:[0m Interactive terminal detected: false
[2m[TIMESTAMP][0m [32m INFO[0m [2mhandlr::common::path[0m[2m:[0m Printing mime information for paths: ["./tests/assets"]
[2m[TIMESTAMP][0m [34mDEBUG[0m [2mhandlr::common::path[0m[2m:[0m JSON output: false
[2m[TIMESTAMP][0m [32m INFO[0m [2mhandlr::common::path[0m[2m:[0m Finished printing mime information
