tests/snapshots/terminal_override__terminal_output_tests_force_true.snap
---
source: tests/terminal_override.rs
info:
  program: handlr
  args:
    - "--force-terminal-output=true"
    - "-vvv"
    - "--disable-notifications"
    - mime
    - "./tests/assets"
---
success: true
exit_code: 0
----- stdout -----
┌────────────────┬─────────────────┐
│[37m [39m[37mpath[39m[37m          [39m[37m [39m│[37m [39m[37mmime[39m[37m           [39m[37m [39m│
├────────────────┼─────────────────┤
│[40m [49m[40m./tests/assets[49m[40m [49m│[40m [49m[40minode/directory[49m[40m [49m│
└────────────────┴─────────────────┘

----- stderr -----
[2m[TIMESTAMP][0m [34mDEBUG[0m [2mhandlr::config::main_config[0m[2m:[0m $LANG not set
[2m[TIMESTAMP][0m [34mDEBUG[0m [2mhandlr::config::main_config[0m[2m:[0m $LANG not set
[2m[TIMESTAMP][0m [34mDEBUG[0m [2mhandlr[0m[2m:[0m Interactive terminal detected: true
[2m[TIMESTAMP][0m [32m INFO[0m [2mhandlr::common::path[0m[2m:[0m Printing mime information for paths: ["./tests/assets"]
[2m[TIMESTAMP][0m [34mDEBUG[0m [2mhandlr::common::path[0m[2m:[0m JSON output: false
[2m[TIMESTAMP][0m [32m INFO[0m [2mhandlr::common::path[0m[2m:[0m Finished printing mime information
